feat(transactions): add list filters
